HelloUltraviolet/Fixtures/RejectedSource/Parallelism/NestedGpuParallel/Expected.uv
//! Expected diagnostic metadata for the NestedGpuParallel rejected-source specimen.

expectedDiagnostic("E-CON-0152", "requirement.20.NoNestedGpuParallel")
